name:                adventofcode
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/blast-hardcheese/adventofcode#readme
license:             BSD3
license-file:        LICENSE
author:              Devon Stewart
maintainer:          blast@hardchee.se
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable adventofcode
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta >= 1.5 && < 1.6
